<resources>
    <string name="app_name" translatable="false">BuyList</string>

    <!--Default-->
    <string name="label_buy_list">Списки</string>
    <string name="label_pattern">Шаблоны</string>
    <string name="label_recipe">Рецепты</string>
    <string name="label_share">Поделиться</string>
    <string name="label_sort">Сортировка</string>
    <string name="buylist_title_share">Список покупок</string>
    <string name="pattern_title_share">Шаблон для списка покупок</string>
    <string name="recipe_title_share">Рецепт</string>
    <string name="label_edit">Редактировать</string>
    <string name="label_delete">Удалить</string>
    <string name="label_search">Поиск</string>
    <string name="email_subject">Отзыв по BuyList</string>
    <string name="hint_product_name">Название продукта</string>
    <string name="hint_product_quantity">1</string>
    <string name="hint_product_unit">шт</string>

    <!--BuyList-->
    <string name="label_buy_lists_info">Создайте свой первый список покупок</string>
    <string name="label_buy_list_info">Список покупок пуст</string>
    <string name="label_btn_pattern">По шаблону</string>
    <string name="label_btn_recipe">По рецепту</string>
    <string name="label_btn_new_product">Новый товар</string>
    <string name="label_patterns_not_found">Шаблоны не найдены</string>
    <string name="label_recipes_not_found">Рецепты не найдены</string>
    <string name="hint_buy_list_title">Введите название списка</string>

    <!--Pattern-->
    <string name="label_patterns_info">Создайте свой первый шаблон</string>
    <string name="label_pattern_info">Шаблон пуст</string>
    <string name="hint_pattern_title">Введите название шаблона</string>

    <!--Recipe-->
    <string name="label_recipes_info">Создайте свой первый рецепт</string>
    <string name="label_recipe_general_info">Основная информация</string>
    <string name="label_recipe_ingredient">Ингредиенты</string>
    <string name="label_cooking_steps">Шаги приготовления</string>
    <string name="label_new_ingredient">Добавить ингредиент</string>
    <string name="label_new_step">Добавить шаг</string>
    <string name="label_number_of_step">%d.</string>
    <string name="label_recipe_category">Категория рецепта:</string>
    <string name="label_cooking_time">Время приготовления:</string>
    <string name="hint_recipe_title">Название</string>
    <string name="hint_recipe_category">Категория</string>
    <string name="hint_recipe_step">Описание шага</string>
    <string name="hint_cooking_time">Время приготовления</string>
    <string name="label_recipe_sort_by_alphabetically">по алфавиту</string>
    <string name="label_recipe_sort_by_category">по категории</string>
    <string name="label_recipe_sort_by_cooking_time">по времени приготовления</string>
    <string name="label_recipe_sort_by_date_of_creation">по дате создания</string>

    <!--ProductDictionary-->
    <string name="label_product_dictionary_info">Словарь пуст</string>

    <!--AboutActivity-->
    <string name="slide_welcome_title">Добро пожаловать в BuyList!</string>
    <string name="slide_welcome_main">Приложение для составления списков покупок</string>
    <string name="slide_list_title">Коллекция списков</string>
    <string name="slide_list_main">Составляй списки покупок</string>
    <string name="slide_pattern_title">Удобные шаблоны</string>
    <string name="slide_pattern_main">Создавай шаблоны на основе регулярно приобретаемых товаров
        или любимых магазинов</string>
    <string name="slide_recipe_title">Любимые рецепты</string>
    <string name="slide_recipe_main">Сохраняй любимые рецепты и переноси ингредиенты в список
        покупок</string>
    <string name="slide_product_dictionary_title">Словарь продуктов</string>
    <string name="slide_product_dictionary_main">Добавляй регулярно приобретаемые товары в словарь
        для более конкретных подсказок при заполнении списка</string>

    <!--ContentDescription-->
    <string name="img_description_default">Изображение</string>
    <string name="img_description_item_menu">Показать меню</string>
    <string name="img_description_new_product">Добавить товар</string>
    <string name="img_description_new_buy_list">Добавить список</string>
    <string name="img_description_new_pattern">Добавить шаблон</string>
    <string name="img_description_new_recipe">Добавить рецепт</string>
    <string name="img_description_edit_recipe">Редактировать рецепт</string>
    <string name="img_description_save">Сохранить</string>
    <string name="img_description_category_color">Цвет категории</string>
    <string name="img_description_prev_color">Предыдущие цвета</string>
    <string name="img_description_next_color">Следующие цвета</string>

    <!--PlaceHolders-->
    <string name="placeholder_btn">Добавить</string>
    <string name="placeholder_title">Заголовок</string>

    <!--Drawer-->
    <string name="nav_product_dictionary">Словарь продуктов</string>
    <string name="nav_import_export_data">Импорт и экспорт списков</string>
    <string name="nav_group_info">Информация</string>
    <string name="nav_feedback">Отправить отзыв</string>
    <string name="nav_about">О приложении</string>

    <!--Snackbar text-->
    <string name="snackbar_action_ok">OK</string>
    <string name="snackbar_buy_lists_loading_error">Не удалось загрузить список покупок.</string>
    <string name="snackbar_empty_buy_list_title">Введите название списка.</string>
    <string name="snackbar_empty_product_name">Введите название продукта.</string>
    <string name="snackbar_patterns_loading_error">Не удалось загрузить список покупок.</string>
    <string name="snackbar_empty_pattern_title">Введите название шаблона.</string>
    <string name="snackbar_products_loading_error">Не удалось загрузить список продуктов.</string>
    <string name="snackbar_recipes_loading_error">Не удалось загрузить список рецептов.</string>
    <string name="snackbar_recipe_loading_error">Не удалось загрузить рецепт.</string>
    <string name="snackbar_empty_recipe_title">Введите название рецепта.</string>
    <string name="snackbar_no_products_in_pattern">В выбранном шаблоне нет продуктов</string>
    <string name="snackbar_no_products_in_recipe">В выбранном рецепте нет продуктов</string>
    <string name="snackbar_products_moved_from_pattern">Продукты из шаблона перенесены в список покупок</string>
    <string name="snackbar_products_moved_from_recipe">Продукты из рецепта перенесены в список покупок</string>
    <string name="snackbar_buylist_products_is_empty">
        Чтобы поделиться списком покупок в нём должна быть хотя бы одна позиция.
    </string>
    <string name="snackbar_pattern_products_is_empty">
        Чтобы поделиться шаблоном в нём должна быть хотя бы одна позиция.
    </string>
    <string name="snackbar_recipe_is_empty">
        Чтобы поделиться рецептом в нём должны быть ингредиенты или шаги приготовления.
    </string>

    <!-- Import/Export -->
    <string name="import_title">Импорт</string>
    <string name="export_title">Экспорт</string>
    <string name="export_info">
        <![CDATA[
            <b>1.</b> Нажмите на кнопку <b>\"Экспорт\"</b>.
            Ваши списки, шаблоны и рецепты будут сохранены в специальный файл, который потребуется
            отправить на вашу электронную почту или в любой из мессенджеров.
        ]]>
    </string>
    <string name="import_info">
        <![CDATA[
            <b>2.</b> На другом устройстве скачайте приложение BuyList и файл, который был экспортирован на
            первом шаге.<br><br>
            <b>3.</b> Нажмите на кнопку <b>\"Импорт\"</b> и выберите этот файл.
        ]]>
    </string>
    <string name="import_file_title">Выберите файл</string>
    <string name="import_error">Ошибка: %s</string>
    <string name="import_success">Данные успешно импортированы</string>

    <!--Colors-->
    <string-array name="category_color">
        <!--мясо-->
        <item>#EF5350</item>
        <!--хозтовары-->
        <item>#EC407A</item>
        <!--консерв-->
        <item>#AB47BC</item>
        <!--орехи/сухофрукты-->
        <item>#7E57C2</item>
        <!--рыба-->
        <item>#5C6BC0</item>
        <!--заморозка-->
        <item>#42A5F5</item>
        <!--напитки-->
        <item>#29B6F6</item>
        <!--молочка-->
        <item>#26C6DA</item>
        <!---->
        <item>#26A69A</item>
        <!--овощи/зелень-->
        <item>#66BB6A</item>
        <!--соусы / масла-->
        <item>#9CCC65</item>
        <!---->
        <item>#D4E157</item>
        <!--фрукты-->
        <item>#FFEE58</item>
        <!---->
        <item>#FFCA28</item>
        <!--хлебобулочные-->
        <item>#FFA726</item>
        <!--бакалея-->
        <item>#FF7043</item>
    </string-array>

</resources>
