<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <import type="android.view.View" />

        <variable
            name="view_model"
            type="ru.buylist.presentation.import_and_export_data.ImportAndExportDataViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <FrameLayout
            android:id="@+id/shadow_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:elevation="5dp"
            android:background="@color/colorScrim"
            android:visibility="@{view_model.showLoading ? View.VISIBLE : View.GONE}">

            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center" />

        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginHorizontal="16dp"
            android:layout_marginVertical="8dp">

            <TextView
                android:id="@+id/export_info_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/export_info"
                android:textSize="16sp"
                android:layout_marginTop="8dp" />

            <Button
                android:id="@+id/export_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/button_top_bg"
                android:onClick="@{()-> view_model.exportData()}"
                android:textColor="@color/colorWhite"
                android:text="@string/export_title"
                android:layout_marginTop="16dp"
                tools:text="Экспорт" />

            <TextView
                android:id="@+id/import_info_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/import_info"
                android:textSize="16sp"
                android:layout_marginTop="16dp" />

            <Button
                android:id="@+id/import_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/button_top_bg"
                android:onClick="@{()-> view_model.chooseFileForImport()}"
                android:textColor="@color/colorWhite"
                android:text="@string/import_title"
                android:layout_marginTop="16dp"
                tools:text="Импорт" />

        </LinearLayout>

    </LinearLayout>

</layout>