<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="android.view.View" />

        <variable
            name="item"
            type="ru.buylist.data.wrappers.GlobalItemWrapper" />

        <variable
            name="callback"
            type="ru.buylist.presentation.product_dictionary.ProductDictionaryItemListener" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="40dp"
            android:layout_marginTop="@dimen/list_item_padding"
            android:layout_marginBottom="@dimen/list_item_padding"
            android:layout_gravity="center_vertical">

            <ImageView
                android:id="@+id/img_category_circle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:contentDescription="@string/img_description_category_color"
                android:src="@drawable/circle" />

            <TextView
                android:id="@+id/tv_item_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/img_category_circle"
                android:layout_centerVertical="true"
                android:layout_marginStart="@dimen/list_item_padding"
                android:layout_toStartOf="@+id/btn_more"
                android:textSize="@dimen/default_text_size"
                android:text="@{item.item.name}"
                android:visibility="@{item.editable ? View.GONE : View.VISIBLE}" />

            <EditText
                android:id="@+id/field_item_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/img_category_circle"
                android:layout_toStartOf="@+id/btn_save"
                android:layout_centerVertical="true"
                android:layout_marginStart="@dimen/list_item_padding"
                android:background="@android:color/transparent"
                android:inputType="text"
                android:textSize="@dimen/default_text_size"
                android:imeOptions="actionDone"
                android:importantForAutofill="no"
                android:hint="@string/hint_product_name"
                app:requestFocus="@{item.editable}"
                android:text="@{item.item.name}"
                android:visibility="@{item.editable ? View.VISIBLE : View.GONE}" />

            <ImageView
                android:id="@+id/btn_more"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="@dimen/list_item_padding"
                android:src="@drawable/ic_more"
                android:contentDescription="@string/img_description_item_menu"
                android:onClick="@{()-> callback.onButtonMoreClick(item)}"
                android:visibility="@{item.editable ? View.GONE : View.VISIBLE}"
                app:tint="@color/colorNavNormal" />

            <ImageView
                android:id="@+id/btn_save"
                android:layout_width="@dimen/btn_create_size"
                android:layout_height="@dimen/btn_create_size"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="@dimen/list_item_padding"
                android:src="@drawable/button_create"
                android:contentDescription="@string/img_description_save"
                android:onClick="@{()-> callback.onButtonSaveClick(item)}"
                android:visibility="@{item.editable ? View.VISIBLE : View.GONE}" />

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorDivider"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginEnd="@dimen/activity_horizontal_margin" />
    </LinearLayout>
</layout>